--- a/EnhancedUI/HtmlContent/Debug/MainMenu/MainMenu.html
+++ b/EnhancedUI/HtmlContent/Debug/MainMenu/MainMenu.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" style="background-color:grey;">
+<html lang="en" id="html" >
 <head>
     <meta charset="UTF-8">
     <title>Main Menu</title>
@@ -7,19 +7,19 @@
     <link rel="stylesheet" href="../common.css"/>
     <link rel="stylesheet" href="MainMenu.css"/>
     <script src="../jquery-3.6.0.min.js"></script>
+    <script src="MainMenu.js"></script>
 </head>
-<body>
+<body  onLoad="MyBackGround.play();" >
+	
 
-    <button type="button" id="continueButton" style = "position:absolute; left:455px; top:371px; width:50px; height:49px;"></button>
-    <button type="button" id="newGameButton"><img src="MainMenuButton.png" width="400" height="100"></button>
+    <button type="button" id="continueButton">Continue Game</button>
+    <button type="button" id="newGameButton">New Game</button>
     <button type="button" id="loadGameButton">Load Game</button>
     <button type="button" id="joinGameButton">Join Game</button>
     <button type="button" id="optionsButton">Options</button>
     <button type="button" id="characterButton">Character</button>
     <button type="button" id="exitButton">Exit</button>
 
-    <div class="bottomright">Enhanced Ui Alpha Build</div>
-
-    <script src="MainMenu.js"></script>
+    
 </body>
 </html>
