--- a/EnhancedUI/HtmlContent/Debug/MainMenu/MainMenu.html
+++ b/EnhancedUI/HtmlContent/Debug/MainMenu/MainMenu.html
@@ -7,19 +7,20 @@
     <link rel="stylesheet" href="../common.css"/>
     <link rel="stylesheet" href="MainMenu.css"/>
     <script src="../jquery-3.6.0.min.js"></script>
-    <script src="MainMenu.js"></script>
+    
 </head>
 <body  onLoad="MyBackGround.play();" >
 	
 
-    <button type="button" id="continueButton">Continue Game</button>
-    <button type="button" id="newGameButton">New Game</button>
-    <button type="button" id="loadGameButton">Load Game</button>
-    <button type="button" id="joinGameButton">Join Game</button>
-    <button type="button" id="optionsButton">Options</button>
-    <button type="button" id="characterButton">Character</button>
-    <button type="button" id="exitButton">Exit</button>
-
+    <button type="button" id="continueButton" style="background-color:transparent;color:white;border-color:red" >Continue Game</button><br><br>
+    <button type="button" id="newGameButton" style="background-color:transparent;color:white;border-color:red">New Game</button><br><br>
+    <button type="button" id="loadGameButton" style="background-color:transparent;color:white;border-color:red">Load Game</button><br><br>
+    <button type="button" id="joinGameButton" style="background-color:transparent;color:white;border-color:red">Join Game</button><br><br>
+    <button type="button" id="optionsButton" style="background-color:transparent;color:white;border-color:red">Options</button><br><br>
+    <button type="button" id="characterButton" style="background-color:transparent;color:white;border-color:red">Character</button><br><br>
+    <button type="button" id="pluginsButton" style="background-color:transparent;color:white;border-color:red">Plugins</button><br><br>
+    <button type="button" id="exitButton" style="background-color:transparent;color:white;border-color:red">Exit</button><br><br>
+<script src="MainMenu.js"></script>
     
 </body>
 </html>
